--- a/templates/user.html
+++ b/templates/user.html
@@ -11,4 +11,11 @@
         {% endfor %}
     {% endif %}
 {% endwith %}
+<div style="margin-left: 50px;">
+    <form action="#" method="post">
+        <label for="email">Email:</label>
+        <input type="email" name="email" placeholder="Enter email ..." value="{{email if email}}"></input>
+        <button style="background-color: #4CAF50; color: white;" type="submit">Submit</button>
+        <input type="name" name="name" placeholder="Enter name ..." value="{{user if user}}"></input>
+        <button style="background-color: #4CAF50; color: white;" type="Delete">Submit</button>
 {% endblock %}
